# ytermusic

.github/workflows/: release.yml
crates/download-manager/: Cargo.toml
crates/download-manager/src/: lib.rs  task.rs
crates/ytermusic/src/: config.rs  main.rs  shutdown.rs
crates/ytermusic/src/structures/: media.rs
crates/ytermusic/src/systems/: mod.rs  player.rs
crates/ytpapi2/src/: lib.rs
